fix(scss): fix margin on tablet

--- a/src/app/components/sections/football-section/styles.scss
+++ b/src/app/components/sections/football-section/styles.scss
@@ -114,7 +114,7 @@
   left: 50%;
 
   @include for-tablet {
-    left: 40%;
+    left: 45%;
     margin-bottom: 42px;
   }
 
@@ -177,6 +177,7 @@
 
     @include for-tablet {
       width: 60%;
+      margin-left: 64px;
     }
 
     @include for-mobile {
